--- a/css/styles.css
+++ b/css/styles.css
@@ -14,3 +14,9 @@ header {
     align-items: center;
     max-height: 100px;
 }
+
+.infocard-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
