--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: Titillium ,Arial, Helvetica, sans-serif;
+    font-family: 'Titillium' ,Arial, Helvetica, sans-serif;
 }
 
 header {
