--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: 100%;
 }
 
 /*.infocard-container {
