--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ main {
     align-items: center;
 }*/
 
-.inforcard {
+.infocard {
     padding: 1em 3em;
     border-style: solid;
     max-width: 50%;
