--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,66 @@
     font-family: 'Titillium' ,Arial, Helvetica, sans-serif;
 }
 
+:root {
+    --bar-width: 60px;
+    --bar-height: 8px;
+    --hamburger-gap: 6px;
+    --foreground:#333;
+    --background:white;
+    --hamburger-margin: 8px;
+    --animation-timing:200ms ease-in-out;
+    --hamburger-height: calc(var(--bar-height) * 3 + var(--hamburger-gap) * 2);
+}
+
+.hamburger-menu {
+    --x-width: calc(var(--hamburger-height) * 1.41421356237);
+    display: flex;
+    flex-direction: column;
+    gap: var(--hamburger-gap);
+    width: max-content;
+    position: absolute;
+    top: var(--hamburger-margin);
+    left: var(--hamburger-margin);
+    z-index: 2;
+    cursor: pointer;
+}
+
+.hamburger-menu::before,
+.hamburger-menu::after,
+.hamburger-menu input {
+content: "";
+width:var(--bar-width);
+height:var(--bar-height);
+background-color: var(--foreground);
+border-radius: 9999px;
+transform-origin: left center;
+transition: opacity var(--animation-timing), width var(--animation-timing);
+}
+
+.hamburger-menu input {
+    appearance: none;
+    padding: 0;
+    margin: 0;
+    outline: none;
+    pointer-events: none;
+}
+
+.hamburger-menu:has(input:checked)::before {
+    rotate: 45deg;
+    width: var(--x-width);
+    translate: 0 calc(var(--bar-height) / -2);
+}
+
+.hamburger-menu:has(input:checked)::before {
+    rotate: -45deg;
+    width: var(--x-width);
+    translate: 0 calc(var(--bar-height) / 2);
+}
+
+.hamburger-menu input:checked {
+
+}
+
 header {
     background-color: #3697F0;
     display: flex;
@@ -15,11 +75,15 @@ header {
     max-height: 100px;
 }
 
+.nav {
+    display:none
+}
+
 main {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100%;
+    min-height: 40rem;
 }
 
 /*.infocard-container {
@@ -29,8 +93,8 @@ main {
 }*/
 
 .infocard {
-    padding: 1em 3em;
+    padding: 1em 1em;
     border-style: solid;
-    max-width: 50%;
-    max-height: 50%;
+    max-width: 20em;
+    max-height: 60em;
 }
