--- a/css/styles.css
+++ b/css/styles.css
@@ -11,12 +11,18 @@
     --bar-width: 60px;
     --bar-height: 8px;
     --hamburger-gap: 6px;
-    --foreground:#333;
-    --background:white;
+    --foreground:#3697F0;
+    --background: white;
     --hamburger-margin: 8px;
-    --animation-timing:200ms ease-in-out;
+    --animation-timing: 100ms ease-in-out;
     --hamburger-height: calc(var(--bar-height) * 3 + var(--hamburger-gap) * 2);
 }
+
+ul {
+    list-style-type: none;
+}
+
+
 
 .hamburger-menu {
     --x-width: calc(var(--hamburger-height) * 1.41421356237);
@@ -31,6 +37,11 @@
     cursor: pointer;
 }
 
+.hamburger-menu:has(input:checked) {
+    --foreground: white;
+    --background: #3697F0;
+}
+
 .hamburger-menu::before,
 .hamburger-menu::after,
 .hamburger-menu input {
@@ -40,7 +51,9 @@ height:var(--bar-height);
 background-color: var(--foreground);
 border-radius: 9999px;
 transform-origin: left center;
-transition: opacity var(--animation-timing), width var(--animation-timing);
+transition: opacity var(--animation-timing), width var(--animation-timing),
+rotate var(--animation-timing), translate var(--animation-timing),
+background-color var(--animation-timing);
 }
 
 .hamburger-menu input {
@@ -57,13 +70,33 @@ transition: opacity var(--animation-timing), width var(--animation-timing);
     translate: 0 calc(var(--bar-height) / -2);
 }
 
-.hamburger-menu:has(input:checked)::before {
+.hamburger-menu:has(input:checked)::after {
     rotate: -45deg;
     width: var(--x-width);
     translate: 0 calc(var(--bar-height) / 2);
 }
 
 .hamburger-menu input:checked {
+opacity: 0;
+width: 0;
+}
+
+.sidebar {
+    position: absolute;
+    transition: translate var(--animation-timing);
+    translate: -100%;
+    padding: 0.5rem 1rem;
+    padding-top: calc(var(--hamburger-height) + var(--hamburger-margin) + 1rem);
+    background-color: var(--foreground);
+    color: var(--background);
+    max-width: 10rem;
+    min-height: 100vh;
+    list-style-type: none;
+    line-height: 2.5em;
+    font-weight: bold;
+    /*border-right: solid;
+    border-color: white;*/
+    opacity: 85%;
 
 }
 
@@ -73,17 +106,32 @@ header {
     justify-content: space-between;
     align-items: center;
     max-height: 100px;
+    display: none;
+}
+
+.hamburger-menu:has(input:checked) + .sidebar {
+    translate: 0;
 }
 
 .nav {
     display:none
 }
 
+
+.hamburger {
+    text-decoration: none;
+    font-size: larger;
+    color: white;
+
+}
+
+
 main {
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 40rem;
+    z-index: -2;
 }
 
 /*.infocard-container {
@@ -94,7 +142,15 @@ main {
 
 .infocard {
     padding: 1em 1em;
-    border-style: solid;
+    background-color: #3697F0;
+    /*border-style: solid;
+    border-width: 1px;*/
     max-width: 20em;
     max-height: 60em;
+    z-index: -1;
+    
+}
+
+.eventcard {
+    max-width: ;
 }
