--- a/css/styles.css
+++ b/css/styles.css
@@ -94,8 +94,8 @@ width: 0;
     list-style-type: none;
     line-height: 2.5em;
     font-weight: bold;
-    /*border-right: solid;
-    border-color: white;*/
+    border-right: solid;
+    border-color: black;
     opacity: 85%;
 
 }
@@ -125,8 +125,15 @@ header {
 
 }
 
-
 main {
+display: flex;
+justify-content: center;
+align-items: center;
+min-height: 40rem;
+z-index: -2;
+}
+
+.infocard.container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -151,6 +158,33 @@ main {
     
 }
 
+.eventcard.container {
+    display: flex;
+    flex-direction: column;
+    
+}
+
 .eventcard {
-    max-width: ;
+    margin-top: 4em;
+    margin-bottom: 4em;
+    padding: 2em 2em;
+    background-color: #3697F0;
+    max-width: 18em;
+    justify-content: space-between;
+}
+
+.explorecard {
+    background-color: #3697F0;
+    margin: 4em 2em;
+    padding: 2em 2em;
+}
+
+.visitcard-container {
+    background-color: #3697F0;
+    margin: 4em 2em 2em 2em;
+}
+
+.visitcard {
+    
+    margin: 2em 2em;
 }
