--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,28 @@ ul {
     list-style-type: none;
 }
 
+body {
+    background-color: #3697F0;
+    /*font-size: larger;*/
+
+}
+
+p {
+font-size: x-large;
+}
+
+header {
+    position: relative;
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /*max-height: 100px;*/
+    min-height: 3.5rem;
+    /*display: none;*/
+    z-index: -2;
+}
+
 
 
 .hamburger-menu {
@@ -38,7 +60,7 @@ ul {
 }
 
 .hamburger-menu:has(input:checked) {
-    --foreground: white;
+    --foreground: #3697F0;
     --background: #3697F0;
 }
 
@@ -100,14 +122,7 @@ width: 0;
 
 }
 
-header {
-    background-color: #3697F0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-height: 100px;
-    display: none;
-}
+
 
 .hamburger-menu:has(input:checked) + .sidebar {
     translate: 0;
@@ -136,77 +151,98 @@ overflow: hidden;
 max-width: 390px;
 }
 
-.infocard.container {
+.infocard-container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 40rem;
     z-index: -2;
+    margin-top: 50px;
 }
 
-/*.infocard-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}*/
+
 
 .infocard {
-    padding: 1em 1em;
-    background-color: #3697F0;
-    /*border-style: solid;
-    border-width: 1px;*/
-    max-width: 20em;
-    max-height: 60em;
+    margin: 4em 2em;
+    padding: 2em 2em;
+    background-color: #8ac2f6;
+    max-width: 390px;
+    max-height: 100%;
     z-index: -1;
-    
-}
+    border-radius: 3px;
+    }
 
-/*.index-image-container {
-    padding: 1em 1em;
-    max-width: 20em;
-    max-height: 60em;
-    z-index: -1;
-}*/
+    .infocard h2 {
+        margin-bottom: 0.4em;
+    }
 
-.index-image-1 {
-display: block;
-width: 10%;
+
+
+
+
+#index-image-1 {
+max-width: 100%;
+max-height: none;
 }
 
 .eventcard.container {
     display: flex;
     flex-direction: column;
-    
+    align-items: center;
+
 }
 
 .eventcard {
-    margin-top: 4em;
+    margin: 2em 0 2em 1.2em;
+    /*margin-top: 4em;
     margin-bottom: 4em;
-    padding: 2em 2em;
-    background-color: #3697F0;
-    max-width: 18em;
+    padding: 2em 2em;*/
+    background-color: #8ac2f6;
+    max-width: 90%;
     justify-content: space-between;
+    border-radius: 3px;
+}
+.eventcard img {
+    max-width: 100%;
+    border-radius: 3px;
+}
+
+.eventcard h2 {
+    margin: 0.4em 0 0.4em 0;
 }
 
 .explorecard {
-    background-color: #3697F0;
+    background-color: #8ac2f6;
     margin: 4em 2em;
     padding: 2em 2em;
+    border-radius: 3px;
 }
 
 .involved-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: #3697F0;
     margin: 55px 0;
 }
 
 .involved-card {
-    max-width: 390px;
-    margin: 50px 0;
+    max-width: 80%;
+    /*margin: 50px 0;*/
+    margin-top: 4em;
+    margin-bottom: 4em;
+    padding: 1em;
+    background-color: #8ac2f6;
+    border-radius: 3px;
+    overflow: hidden;
+    
 }
 
-.involved-img {
+.involved-card img {
     object-fit: scale-down;
-    max-width: 390px;
+    max-width: 100%;
+    border-radius: 3px;
 }
 
 #involved-img-1 {
@@ -214,7 +250,8 @@ max-width: 80%;
 }
 
 .involved-text {
-    margin: 3em;
+
+    padding: 3em;
     background-color: #8ac2f6;
     border-radius: 3px;
 }
@@ -226,5 +263,137 @@ max-width: 80%;
 .involved-text p {
     font-weight: 400;
     font-size: large;
-    margin: 1em;
+   
+}
+
+
+
+.exhibitioncard-container {
+    display: flex;
+    flex-direction: column;
+    background-color: #3697F0;
+    margin: 55px 0;
+    justify-content: space-between;
+    padding: 2em 2em;
+}
+
+.exhibitioncard {
+
+    max-width: 18em;
+    /*margin: 50px 0;*/
+    margin-top: 4em;
+    margin-bottom: 4em;
+    padding: 1em;
+    background-color: #8ac2f6;
+    border-radius: 3px;
+    
+}
+
+.exhibitioncard img {
+    display: block;
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 3px;
+
+
+}
+
+footer {
+    display: flex;
+    background-color: white;
+    font-size: large;
+    justify-content: center;
+}
+
+.footerdiv img {
+    max-width: 40px;
+}
+
+.footerdiv {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 3em 3em;
+    /*margin-left: 3em;*/
+}
+
+/*.hours {
+margin: 3em 6em;
+}*/
+
+.address {
+    margin: 1em 0 1em;
+}
+
+.footer-separation {
+    border-color: #3697F0;
+    border-style: solid;
+    width: 120%;
+    border-radius: 4px;
+}
+
+.text-hr {
+    border-color: #8ac2f6;
+    border-style: solid;
+    margin: 0.5em;
+}
+
+.exhibitioncard h1 {
+    margin-bottom: 0.4em;
+}
+
+@media (min-width:390px) {
+    main {
+        max-width: 100%;
+    }
+    .infocard {
+        max-width: 100%;
+    }
+    .exhibitioncard {
+        max-width: 100%;
+    }
+}
+
+@media (min-width:1180px) {
+main {
+    max-width: 100%;
+}
+footer {
+    max-width: max-content;
+}
+.footerdiv {
+    max-width: 100%;
+}
+.infocard {
+    max-width: 100%;
+}
+footer {
+    max-width: 1180px;
+}
+.footerdiv {
+    min-width: 75%;
+}
+.eventcard {
+    max-width: 90%;
+    margin-left: 2.5em;
+}
+}
+
+@media (min-width:1200px) {
+    header {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .nav {
+        display: flex;
+        font-size: xx-large;
+    }
+    
+    .hamburger-menu, .sidebar {
+        display: none;
+    }
 }
